--- a/src/renderer/DeviceSettingsWindow.mxml
+++ b/src/renderer/DeviceSettingsWindow.mxml
@@ -7,6 +7,7 @@
 			   initialize="settings_initializeHandler(event)">
 	<fx:Script>
 		<![CDATA[
+			import mx.core.FlexGlobals;
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
@@ -96,7 +97,7 @@
 				}
 				
 				if(hasToRestart) {
-					AtsMobileStation.devices.restartDev(dev);
+					FlexGlobals.topLevelApplication.restartDevice(dev);
 				}
 				PopUpManager.removePopUp(this);
 			}			
