--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -38,7 +38,7 @@
 			}
 			
 			public function restartDevice(dev:Device):void{
-				devices.restartDev(dev);
+				dev.isCrashed = true;
 			}
 			
 			public function terminateSimulator(id:String):void{
