--- a/src/renderer/RunningDeviceRenderer.mxml
+++ b/src/renderer/RunningDeviceRenderer.mxml
@@ -4,10 +4,12 @@
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
 				autoDrawBackground="true" height="40"
 				removedFromStage="removedFromStageHandler(event)"
-				toolTip="{dev.tooltip}">
+				>
 	
 	<fx:Script>
 		<![CDATA[
+			import com.greensock.TweenLite;
+			
 			import flash.filters.BitmapFilterQuality;
 			
 			import mx.core.DragSource;
@@ -24,7 +26,7 @@
 			
 			[Bindable]
 			private var dev:Device;
-			
+						
 			private function showWindow(event:MouseEvent, dev:Device):void{
 				var tw:DeviceSettingsWindow = new DeviceSettingsWindow();
 				tw.dev = dev;
@@ -54,6 +56,7 @@
 				if(this.dev is IosDevice){
 					mobile.source = "assets/icons/32/ios.png";
 				}else{
+					iosButtons.removeAllElements();
 					mobile.source = "assets/icons/32/android.png";
 				}
 			}
@@ -67,29 +70,23 @@
 			{
 				restartButton.includeInLayout = true;
 				restartButton.visible = true;
-				homeButton.visible = dev.status == "ready";
-				homeButton.includeInLayout = dev.status == "ready";
+				
 				iconStatus.visible = false;
 				iconStatus.includeInLayout = false;
 				
-				if(this.dev is IosDevice) {
-					settingsButton.includeInLayout = true;
-					settingsButton.visible = true;
-				}
+				iosButtons.visible = true;
+				TweenLite.fromTo(iosButtons, 0.4, {alpha:0.0}, {alpha:1.0});
 			}
 			
 			protected function mainGroup_rollOutHandler(event:MouseEvent):void
 			{
-				if(this.dev is IosDevice) {
-					settingsButton.includeInLayout = false;
-					settingsButton.visible = false;
-				}
+				iosButtons.visible = false;
+				
+				iconStatus.visible = true;
+				iconStatus.includeInLayout = true;
+
 				restartButton.includeInLayout = false;
 				restartButton.visible = false;
-				homeButton.visible = false;
-				homeButton.includeInLayout = true;
-				iconStatus.visible = true;		
-				iconStatus.includeInLayout = true;
 			}
 			
 			protected function removedFromStageHandler(event:Event):void
@@ -124,7 +121,8 @@
 	
 	<s:HGroup id="mainGroup" width="100%" verticalAlign="middle" verticalCenter="0" filters="{dropShadowFilterMiddle}"
 			  paddingRight="6" paddingLeft="2" rollOver="mainGroup_rollOverHandler(event)" rollOut="mainGroup_rollOutHandler(event)">
-		<s:HGroup id="firstGroup" verticalAlign="middle" mouseDown="mouseDownHandler(event)" buttonMode="true" gap="0">
+		<s:HGroup id="firstGroup" verticalAlign="middle" mouseDown="mouseDownHandler(event)" gap="0"
+				  toolTip="{dev.tooltip}">
 			<s:BitmapImage  id="mobile" source="assets/icons/32/android.png" smooth="true" smoothingQuality="high"/>
 			<s:VGroup gap="3" mouseEnabled="false" verticalAlign="bottom" height="100%">
 				<s:Label visible="{dev.ip==null}" includeInLayout="{dev.ip==null}" 
@@ -140,21 +138,20 @@
 			</s:VGroup>
 		</s:HGroup>
 		
-		<s:Spacer width="100%"/>
-		
-		<s:Group id="homeButton" buttonMode="true" click="goHome(event, dev)"
-				 toolTip="Device home button" visible="false" includeInLayout="false">
-			<s:BitmapImage source="assets/icons/24/home.png" width="20" height="20" smooth="true" smoothingQuality="high"/>
-		</s:Group>
-		
-		<s:Group id="settingsButton" buttonMode="true" click="showWindow(event, dev)"
-				 toolTip="Settings of device" visible="false" includeInLayout="false">
-			<s:BitmapImage source="assets/icons/24/run.png" smooth="true" smoothingQuality="high"/>
-		</s:Group>
+		<s:HGroup id="iosButtons" width="100%" horizontalAlign="right" visible="false" verticalAlign="middle">
+			<s:Group id="homeButton" buttonMode="true" click="goHome(event, dev)"
+					 toolTip="Device home button" visible="{dev.status=='ready'}">
+				<s:BitmapImage source="assets/icons/24/home.png" smooth="true" smoothingQuality="high"/>
+			</s:Group>
+			<s:Group id="settingsButton" buttonMode="true" click="showWindow(event, dev)"
+					 toolTip="Settings of device">
+				<s:BitmapImage source="assets/icons/24/run.png" smooth="true" smoothingQuality="high"/>
+			</s:Group>
+		</s:HGroup>
 		
 		<s:BitmapImage id="iconStatus" source="assets/icons/24/{dev.status}.png" smooth="true" smoothingQuality="high"/>
 		<s:Group id="restartButton" buttonMode="true" click="restart_clickHandler(event)"
-				 toolTip="Restart device" visible="false" includeInLayout="false">
+				 toolTip="Restart driver" visible="false" includeInLayout="false">
 			<s:BitmapImage source="assets/icons/24/restart.png" smooth="true" smoothingQuality="high"/>
 		</s:Group>
 	</s:HGroup>
